tests/unconstrained-generics.chg.stderr
type error: type annotations needed
 -> unconstrained-generics.chg:5:11

    return foo();
           ^^^
